tests/diagnostics/packages/exports/duplicate_member/expect.txt
# exit: 1
input/PACKAGE.coppice:1:18: error: duplicate exported symbol 'Token'
  exports { Token, Token }
                   ^
